Map alignment fixes.

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 50px 0;
+    margin: 50px auto;
   }
 
 .card {
@@ -26,6 +26,6 @@
 
 @media only screen and (max-width: 770px) {
   .card {
-    margin: 2% 0 !important;
+    margin: 2% auto !important;
   }
 }
